--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/huseyinbabal/kubernetes-node-example/issues"
   },
-  "homepage": "https://github.com/huseyinbabal/kubernetes-node-example#readme"
+  "homepage": "https://github.com/huseyinbabal/kubernetes-node-example#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-http-proxy": "^1.5.1"
+  }
 }
